# notpad

./: .gitignore  CMakeLists.txt  README.md  deploy.bat
src/: CMakeLists.txt  editor.cpp  editor.hpp  file.cpp  file.hpp  main.cpp  notpad.cpp  notpad.hpp  resource.rc  settings.cpp  settings.hpp  tab.cpp  tab.hpp
src/forms/: input.txt  notpad.ui  styles.css  todo.txt
src/utils/: namefilterlist.cpp  namefilterlist.hpp  textstream.cpp  textstream.h
test/unit/: CMakeLists.txt  test_encodings.cpp  test_namefilterlist.cpp
test/unit/testdata/: test_ansi.txt  test_utf16bebom.txt  test_utf16lebom.txt  test_utf8.txt  test_utf8bom.txt
